--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			<hr>
 			<div class="footer">
 				<p>Phonebook demo app</p>
-				<p>Source code</p>
+				<p><a href="https://github.com/jroratorio/kisan-phonebook">Github repo</a></p>
 			</div>
 
 		</div> 
